--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
   "name": "xg-htmlhint",
   "version": "0.0.1",
-  "description": "\"A Static Code Analysis Tool for HTML,Fork from https://github.com/yaniswang/HTMLHint.\"",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "A Static Code Analysis Tool for HTML,Fork from https://github.com/yaniswang/HTMLHint.",
+  "main": "./index",
+  "dependencies": {
+    "commander": "2.6.0",
+    "colors": "1.0.3",
+    "jshint": "2.6.3",
+    "csslint": "0.10.0"
+  },
+  "devDependencies": {
+    "expect.js": "0.2.0",
+    "grunt": "0.4.1",
+    "grunt-cli": "0.1.6",
+    "grunt-contrib-clean": "0.4.0",
+    "grunt-contrib-concat": "0.1.3",
+    "grunt-contrib-jshint": "0.3.0",
+    "grunt-contrib-uglify": "0.2.0",
+    "grunt-contrib-watch": "0.3.1",
+    "grunt-exec": "0.4.0",
+    "grunt-mocha-hack": "0.1.0",
+    "grunt-replace": "0.4.0",
+    "mocha": "2.2.0"
+  },
+  "bin": {
+    "htmlhint": "./bin/htmlhint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/yangjiyuan/xg-htmlhint.git"
   },
   "keywords": [
     "html",
