--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xg-htmlhint",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A Static Code Analysis Tool for HTML,Fork from https://github.com/yaniswang/HTMLHint.",
   "main": "./index",
   "dependencies": {
@@ -24,7 +24,7 @@
     "mocha": "2.2.0"
   },
   "bin": {
-    "htmlhint": "./bin/htmlhint"
+    "xhtmlhint": "./bin/htmlhint"
   },
   "repository": {
     "type": "git",
