change id-name-unique into id-unique

--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -6,6 +6,6 @@
     'attr-lowercase': true,
     'attr-value-quotes': 'double',
     'attr-no-duplication': true,
-    'id-name-unique': true,
+    'id-unique': true,
     'spec-char-escape': true
 }
